# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-11-17 Piotr Ozarowski <ozarow@gmail.com>
	* Default sort column can be set in preferences

2006-11-16 Piotr Ozarowski <ozarow@gmail.com>
	* "Edit movie details in 'Add movie' window" transition finished
	* Show right window after editing person's details
	* Added more options to command line
	* GNOME HIG related changes in Glade file (still needs work)

2006-11-08 Piotr Ozarowski <ozarow@gmail.com>
	* "Edit movie details in 'Add movie' window" transition started
	  + Keep widgets in Griffith.widgets dictionary

2006-09-25 Piotr Ozarowski <ozarow@gmail.com>
	* Added possibility to change Griffith's home directory

2006-09-24 Piotr Ozarowski <ozarow@gmail.com>
	* Added Swedish translation (thanks to Daniel Nylander)

2006-09-20 Piotr Ozarowski <ozarow@gmail.com>
	* AniDB movie plugin now supports gziped data (closes: #5685)

2006-09-15 Piotr Ozarowski <ozarow@gmail.com>
	* Updated German translation (thanks to Malte Wiemann)

2006-09-12 Piotr Ozarowski <ozarow@gmail.com>
	* "With" renamed to "Cast"
	* Tiny changes in preferences window

2006-09-08 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed required PyGTK version
	* Installation is now not required to run Griffith
	  (move griffith file to lib directory and run "./lib/griffith")

2006-09-07 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Updated Czech translation (thanks to Ondra 'Kepi' Kudlík)

2006-09-06 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed CSFD movie plugin (thanks to Ondra 'Kepi' Kudlík for patch #1449)

2006-09-02 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed some UTF encoding problems in FDb, Filmweb, Onet and WP movie plugins

2006-08-28 Piotr Ozarowski <ozarow@gmail.com>
	* Some GUI changes mainly suggested by Alan Horkan:
	  + menu reorganized
	  + poster button now opens poster window
	  + changed some icons to their stock equivalent

2006-08-27 Piotr Ozarowski <ozarow@gmail.com>