@@ -135,9 +135,8 @@ def restore(self):
 		people_treeview(self)
 		# let's refresh the treeview
 		self.clear_details()
-		self.populate_treeview(self.db.Movie.select())
-		self.total = self.db.Movie.count()
-		self.select_last_row(self.total)
+		self.populate_treeview()
+		self.go_last()
 		self.treeview_clicked()
 		self.count_statusbar()
 		gutils.info(self, _("Backup restored"), self.widgets['window'])
@@ -229,7 +228,7 @@ def merge(self):
 		self.clear_details()
 		self.populate_treeview(self.db.Movie.select())
 		self.total = self.db.Movie.count()
-		self.select_last_row(self.total)
+		self.go_last()
 		self.treeview_clicked()
 		self.count_statusbar()
 		gutils.info(self, _("Databases merged!\n\nProcessed movies: %s\nMerged movies: %s"%(movies, merged)), self.widgets['window'])
