@@ -6,6 +6,7 @@ Griffith ChangeLog
 
 2006-11-17 Piotr Ozarowski <ozarow@gmail.com>
 	* Default sort column can be set in preferences
+	* Menu's show seen/loaned movies only is now used more widely
 
 2006-11-16 Piotr Ozarowski <ozarow@gmail.com>
 	* "Edit movie details in 'Add movie' window" transition finished
